--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "realtime-device-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords":  ["realtime", "device", "tracker", "socket.io", "express"],
+  "author": "Sumit prajapati",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
